Comment on how to run examples